# ai_profit_hunter

./: .env  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: keep_awake.yml  run_bot.yml
src/: NEWS_AUTO_POSTER_BACKUP.PY  ai_analyzer.py  ai_profit_hunter.py  hub_auto_poster_for_youtube.py  keep_alive.py  keep_awake_bot.py  news_auto_poster.py  news_crawler.py  news_provider.py  oci_ampere_hunter.py  oci_freetier_hunter.py  ssh-key-2026-04-15.key  ssh-key-2026-04-15.key.pub  wp_publisher.py
src/streamlit_keep_alive/: keep_alive.py
src/workflows/: keep_awake.yml
workflows/: run_bot.yml
